# scala3-bsp-semantic-ls

./: .gitignore  Cargo.toml  NOTICE.md  README.md  build.mill  flake.nix  mill  plan-rust.md  plan.md  plan2.md  rlcr-rust.md  rlcr.md  zaozi-plugin.md
.github/workflows/: ci.yml
crates/ls-bench/: Cargo.toml
crates/ls-bench/src/: lib.rs  main.rs
crates/ls-bench/tests/: smoke.rs
crates/ls-bsp/: Cargo.toml
crates/ls-bsp/src/: client.rs  discovery.rs  errors.rs  jsonrpc.rs  lib.rs  loader.rs  model.rs  protocol.rs  semanticdb.rs  session.rs  uri.rs  wire.rs
crates/ls-bsp/tests/: discovery.rs  launch.rs  mill_smoke.rs  project_model.rs  semanticdb_flags.rs  session.rs
crates/ls-engine/: Cargo.toml
crates/ls-engine/src/: call_hierarchy.rs  hash.rs  highlight.rs  identifiers.rs  ingest.rs  lib.rs  orchestrator.rs  overlay.rs  references.rs  rename.rs  state.rs  symbol_encoding.rs  targets.rs
crates/ls-engine/tests/: call_hierarchy.rs  document_symbols.rs  engine.rs  implementations.rs  references_matrix.rs  rename_matrix.rs
crates/ls-engine/tests/common/: mod.rs
crates/ls-engine/tests/fixture/: mod.rs
crates/ls-engine/tests/fixtures/: README.md
crates/ls-engine/tests/fixtures/sources/a/src/pkga/: Alpha.scala  Beta.scala  Copyable.scala  Core.scala  Exported.scala  Externals.scala  Gadget.scala  GeneratedUse.scala  Impl.scala  Inline.scala  Item.scala  LocalDef.scala  Named.scala  Opaque.scala  Over.scala  Private.scala  ReadonlyUse.scala  TopLevel.scala  Using.scala  Vars.scala  Widget.scala
crates/ls-engine/tests/fixtures/sources/b/src/pkgb/: UseB.scala
crates/ls-engine/tests/fixtures/sources/c/src/pkga/: CopyCore.scala
crates/ls-engine/tests/fixtures/sources/dep/src/pkgdep/: DepThing.scala
crates/ls-engine/tests/fixtures/sources/shared/src/shared/: Shared.scala
crates/ls-index-model/: Cargo.toml
crates/ls-index-model/src/: bitset.rs  error.rs  flags.rs  groups.rs  ids.rs  lib.rs  semantics.rs  symbol.rs  text.rs  unsafe_reason.rs  uri.rs
crates/ls-index-model/tests/: properties.rs
crates/ls-jvm/: Cargo.toml
crates/ls-jvm-spike/: Cargo.toml  boundary.h  cbindgen.toml
crates/ls-jvm-spike/src/: lib.rs  main.rs
crates/ls-jvm-spike/tests/: no_jni_guard.rs  scenarios.rs
crates/ls-jvm/src/: backend.rs  boot.rs  dispatch.rs  jni.rs  lib.rs  mirror.rs  stdout_guard.rs  watchdog.rs
crates/ls-jvm/tests/: live_boundary.rs  live_definition.rs  live_pcplugin.rs  live_recovery.rs  live_zaozi.rs
crates/ls-pc-abi/: Cargo.toml  boundary.h  cbindgen.toml
crates/ls-pc-abi/examples/: codec_vectors.rs
crates/ls-pc-abi/src/: abi.rs  canary.rs  codec.rs  lib.rs  memory.rs  payloads.rs
crates/ls-pc-abi/tests/: boundary.rs  canary.rs  fuzz.rs  roundtrip.rs
crates/ls-semanticdb/: Cargo.toml
crates/ls-semanticdb/src/: batch.rs  error.rs  groups.rs  lib.rs  locator.rs  md5.rs  model.rs  normalize.rs  parser.rs  profile.rs  symbols.rs  wire.rs
crates/ls-semanticdb/tests/: groups.rs  locator.rs  md5.rs  pipeline.rs  scalac_integration.rs  symbols.rs  wire.rs
crates/ls-semanticdb/tests/common/: mod.rs
crates/ls-semanticdb/tests/fixtures/sources/src/fix/: Animals.scala  Box.scala  Copy.scala  Derives.scala  Export.scala  Opaque.scala  Over.scala  Person.scala  Use.scala
crates/ls-server/: Cargo.toml
crates/ls-server/src/: bootstrap.rs  build_scheduler.rs  capabilities.rs  cli.rs  convert.rs  diagnostics.rs  doctor.rs  documents.rs  formatting.rs  jsonrpc.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  pc.rs  pc_convert.rs  pc_diagnostics.rs  pc_lsp.rs  pc_overlay.rs  protocol.rs  server.rs  services.rs  store_dump.rs  workspace_uris.rs
crates/ls-server/tests/: bootstrap.rs  fake_bsp_e2e.rs  formatting_wire.rs  index_nav_wire.rs  live_pc.rs  log_lifecycle.rs  pc_wire.rs  real_bsp_e2e.rs  real_bsp_pc.rs  real_bsp_pc_recovery.rs  server_surface.rs  watched_files_wire.rs
crates/ls-server/tests/real_bsp_common/: mod.rs
crates/ls-server/tests/snapshots/: index_nav_wire__document-symbol-core.snap  index_nav_wire__document-symbol-over.snap  index_nav_wire__implementation-greet.snap  pc_wire__code-actions.snap  pc_wire__completion.snap  pc_wire__definition.snap  pc_wire__folding-ranges.snap  pc_wire__hover.snap  pc_wire__inlay-hints.snap  pc_wire__resolved-item.snap  pc_wire__selection-ranges.snap  pc_wire__semantic-tokens-full.snap  pc_wire__semantic-tokens-range.snap  pc_wire__signature-help.snap  pc_wire__type-definition.snap
crates/ls-store/: Cargo.toml
crates/ls-store/src/: crc.rs  data.rs  durable.rs  error.rs  format.rs  lib.rs  manifest.rs  reader.rs  search.rs  snapshot.rs  wire.rs  workspace_state.rs  writer.rs
crates/ls-store/tests/: random_corpus.rs  search.rs  segment.rs  store.rs  symbol_at.rs  validation.rs
crates/ls-testkit/: Cargo.toml
crates/ls-testkit/src/: client.rs  fake_bsp.rs  fake_pc.rs  fixtures.rs  lib.rs  logcap.rs  positions.rs  wire.rs
docs/: architecture.md  coverage-audit.md  deployment.md  index-format.md  nix-build.md  plugin-spi.md  traceability.md
it/lsp-blackbox/: conftest.py  fake_bsp.py  pytest.ini  test_call_hierarchy.py  test_diagnostics.py  test_formatting.py  test_index_queries.py  test_lifecycle.py  test_pc_payload.py  test_robustness.py  test_semantic_tokens.py  test_watched_files.py
it/nvim/: e2e.lua
it/sample-workspace/: build.mill
it/zaozi/: NOTICE.md  build.mill
it/zaozi/decoder/: package.mill
it/zaozi/rvdecoderdb/: package.mill
modules/ls-pc-host-spike/src/: SpikeAgent.scala
modules/ls-pc-navtestplugin/resources/: plugin.properties
nix/: checks.nix  dev-shell.nix  ivy-lock.nix  package.nix  pc-host-agent.nix  pc-navtest-plugin.nix  python-tools.nix  rust.nix  spike-agent.nix  zaozi-pcplugin.nix
nix/patches/: zaozi-semanticdb.patch
scripts/: aot-train.sh  check-audit-inventory.sh  check-docs.sh  check-ivy-lock.sh  check-offline-compile.sh  it-aot.sh  it-lsp-blackbox.sh  it-mill-smoke.sh  it-nvim-zaozi-full.sh  it-nvim-zaozi.sh  it-real-bsp-rs.sh  it-real-bsp.sh  it-zaozi.sh  regen-ivy-lock.sh  regen-pc-abi-bindings.sh  regen-pc-host-bindings.sh  regen-spike-bindings.sh
(+271 files in other folders)
